--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,12 @@
     <title>Sharingan</title>
 </head>
 <body>
-
+<div class="page">
+<a href="index.html">log out</a>
+<a href="index2.html"> second page</a>
+<a href="index3.html"> third page</a>
+<a href=""></a>
+</div>
     <div style="display: flex; gap: 30px">
     <img src="./image/sharingan.png" height="300" width="300" alt="">
     <div>
@@ -70,11 +75,6 @@ matured mid-battle.
         </p>
 <div style="display:flex; gap: 25px;" >
     <img src="./image/sharingan2.webp" height="300" width="300" alt="">
-</div>
-<a href="index.html">log out</a>
-<a href="index2.html"> second page</a>
-<a href="index3.html"> third page</a>
-<a href=""></a>
-</div>
+
 </body>
 </html>
