--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,12 @@
     <title>Mangekyō Sharingan</title>
 </head>
 <body>
+    <div class="page">
+        <a href="index.html">log out</a>
+        <a href="index1.html"> first page</a>
+        <a href="index3.html"> third page</a>
+        <a href=""></a>
+        </div>
     <div style="display: flex; gap: 30px">
     <img src="./image/mangekyou.jpg" alt="">
     <div>
