--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="registration">
         <form action="#">
             <div class="input">
-                <input type="name" placeholder="name">
+                <input type="name" placeholder="name" required>
             </div>
             <div style="margin-top: 5px;">
                 <input type="surname" placeholder="surname">
